tests/type_errors/resmaperr_type_mismatch.nos
# expect_error: type mismatch
main() = Err("hello").resMapErr(x => x + 1)
